--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "js-cookie": "^2.2.1",
     "moment": "^2.29.1",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
