--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "clipboard": "^2.0.6",
     "core-js": "^3.6.5",
+    "dayjs": "^1.10.3",
     "js-cookie": "^2.2.1",
     "moment": "^2.29.1",
     "nprogress": "^0.2.0",
